Migrate from JPA to MyBatis: replace repositories with mapper interfaces and XML files